<resources>
    <string name="app_name">Shadipedia</string>
    <string name="user">User</string>
    <string name="provider">Provider</string>
    <string name="todo">TODO</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="prompt_email">Email :</string>
    <string name="prompt_password">Password :</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="shadipedia">Shadipedia</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="signin">SignIn</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="name">Name :</string>
    <string name="enter_name">Enter Name</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="age">Age :</string>
    <string name="profile">Profile</string>
    <string name="mobile">Mobile :</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="permission_request_denied">Request is denied</string>
    <string name="dot">...</string>
    <string name="title_activity_provider__home">Provider_Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_user__post__display">User_Post_Display</string>

    <string-array name="search">
        <item>name</item>
        <item>city</item>
        <item>category</item>
        <item>price</item>
    </string-array>
    <string name="title_activity_user_favorite">UserFavorite</string>
    <string name="title_activity_user_chat_list">UserChatList</string>
    <string name="title_activity_provider_chat_list">ProviderChatList</string>
    <string name="title_activity_single_post_chats_list">SinglePostChatsList</string>
</resources>