<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backfromlogin"
    tools:context="com.spapp.shadipedia.User.UserLoginFragment">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="10sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/Login"
                android:layout_width="wrap_content"
                android:layout_height="42sp"
                android:layout_weight="1"
                android:background="@drawable/switchbuttonleft"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/app"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/Register"
                android:layout_width="wrap_content"
                android:layout_height="42sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/switchbuttonright"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:elevation="5dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/profile_tap">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:textCursorDrawable="@color/black"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:elevation="5dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:textCursorDrawable="@color/black"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:background="@color/DarkRed"
            android:gravity="center"
            android:paddingVertical="10sp"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fors"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/top"
        android:gravity="center">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/gsign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fors"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/ForgotuPassword"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:gravity="center"
            android:background="@color/DarkRed"
            android:paddingHorizontal="10dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

</RelativeLayout>