<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backfromlogin"
    tools:context="com.spapp.shadipedia.Provider.ProviderRegisterFragment">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="10sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/Login"
                android:layout_width="wrap_content"
                android:layout_height="42sp"
                android:layout_weight="1"
                android:background="@drawable/switchbutton2left"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/Register"
                android:layout_width="wrap_content"
                android:layout_height="42sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/switchbutton2right"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/app"
                android:textSize="24sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginHorizontal="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/Pprofilepicture"
                    android:layout_width="137dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_menu_camera"
                    android:elevation="5dp"
                    android:scaleType="centerCrop" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:elevation="5dp"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPName"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:textCursorDrawable="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:elevation="5dp"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPEmail"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:textCursorDrawable="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:elevation="5dp"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPAge"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/age"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:textCursorDrawable="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:elevation="5dp"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPMobile"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/mobile"
                        android:inputType="number"
                        android:lines="1"
                        android:textCursorDrawable="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:elevation="5dp"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPPassword"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:textCursorDrawable="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:elevation="5dp">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/ptc"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:hint="@string/i_agree_to_the_terms_and_conditions"
                        android:textCursorDrawable="@color/black"
                        android:visibility="visible"
                        app:buttonTint="#37FF00" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/Signupprovider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginBottom="10sp"
                        android:background="@color/DarkRed"
                        android:paddingVertical="10sp"
                        android:text="@string/signup"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>